--- a/angular.json
+++ b/angular.json
@@ -76,11 +76,13 @@
             "styles": ["src/styles.css"],
             "scripts": []
           }
-        },
-        "deploy": {
-          "builder": "angular-cli-ghpages:deploy"
-        }
-      }
+        },"deploy": {
+            "builder": "angular-cli-ghpages:deploy",
+            "options": {
+              "baseHref": "/",
+              "dir": "dist/portfolio"
+          }
+}     }
     }
   },
   "cli": {
